@@ -39,7 +39,7 @@ HS_RADSECRET=${HS_RADSECRET:-$HS_UAMSECRET}
 HS_RADAUTH=${HS_RADAUTH:-1812}
 HS_RADACCT=${HS_RADACCT=1813}
 HS_ADMINUPDATEFILE=${HS_ADMINUPDATEFILE:-$LOCAL_CONF}
-HS_ADMINTERVAL=${HS_ADMINTERVAL:-60}
+HS_ADMINTERVAL=${HS_ADMINTERVAL:-0}
 HS_RADCONF=${HS_RADCONF:-off}
 HS_RADCONF_SERVERS=${HS_RADCONF_SERVERS:+$(echo "$HS_RADCONF_SERVERS"|sed 's/[;, ]/ /g')}
 HS_RADCONF_AUTHPORT=${HS_RADCONF_AUTHPORT:-1812}
