@@ -1,6 +1,7 @@
+
 man_MANS = chilli.8 chilli.conf.5 chilli_query.1 chilli_response.1 \
 chilli_radconfig.1 chilli-radius.5 chilli_opt.1 chilli_rtmon.1 \
-chilli_redir.1 chilli_proxy.1 chilli_radsec.1
+chilli_redir.1 chilli_proxy.1 chilli_radsec.1 chilli_script.1
 
 man_aux = $(man_MANS:=.in)
 EXTRA_DIST = $(man_aux) \
@@ -69,5 +70,10 @@ chilli_radsec.1: Makefile chilli_radsec.1.in
 	rm -f chilli_radsec.1 chilli_radsec.1.tmp
 	$(edit) chilli_radsec.1.in >chilli_radsec.1.tmp
 	mv chilli_radsec.1.tmp chilli_radsec.1
+
+chilli_script.1: Makefile chilli_script.1.in
+	rm -f chilli_script.1 chilli_script.1.tmp
+	$(edit) chilli_script.1.in >chilli_script.1.tmp
+	mv chilli_script.1.tmp chilli_script.1
 
 
